--- a/src/main/webapp/scripts/app/application/project/project.html
+++ b/src/main/webapp/scripts/app/application/project/project.html
@@ -21,7 +21,7 @@
 		<br>
 	    <div class="row">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
-			    <div class="form-group">
+			    <div class="form-group" ng-if="!isRenewal">
 		            <label translate="project.form.comingDate" for="field_comingDate">ComingDate</label>
 			        <div class="input-group date">
 				        <span class="input-group-addon">
