--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -61,19 +61,10 @@
 	</div>
 	<br>
     <div class="row">
-    	<div class="col-md-10 col-md-offset-1 well">
-    		<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p>
-			<ul>
-				<li>d'un passeport valide,</li>
-				<li>d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li>
-				<li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li>
-				<li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant).</li>
-			</ul>
-			<p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p>
-			<p>Vous devrez apporter les originaux de ces documents lors du rendez-vous.</p>
+    	<div class="col-md-10 col-md-offset-1 well" translate="etudier.preparationText">
     	</div>
 	</div>
 	<div class="row row-center">
-    	<button class="btn btn-primary" translate="etudier.button.start" ng-click="initRequest()">Start</button>
+    	<button class="btn btn-primary" translate="etudier.button.start" ng-click="createApplication()">Start</button>
 	</div>
 </div>
