--- a/src/main/webapp/scripts/app/application/payment/payment.html
+++ b/src/main/webapp/scripts/app/application/payment/payment.html
@@ -19,8 +19,9 @@
 	<br>
 	<div class="row row-center">
     	<div class="col-xs-10 col-xs-offset-1">
-   			<p translate="payment.form.applicationFee">application fee</p>
-   			<p translate="payment.form.residencyTaxes">residency taxes</p>
+   			<p translate="payment.form.applicationFee" ng-if="!isRenewal">application fee</p>
+   			<p translate="payment.form.residencyTaxes" ng-if="!isRenewal">residency taxes</p>
+   			<p translate="payment.form.residencyTaxes.renouvellement" ng-if="isRenewal">residency taxes</p>
    		</div>
 	</div>
 	<br>
