--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -26,7 +26,7 @@
         	<box-menu boxtitle="main.usager.title.study" boxlogo="graduation-cap" ui-sref="usager/etudier"></box-menu>
         </div>
         <div class="col-sm-6 col-md-4">
-	        <box-menu boxtitle="main.usager.title.work" boxlogo="briefcase"></box-menu>
+	        <box-menu boxtitle="main.usager.title.work" boxlogo="briefcase" disabled="true"></box-menu>
         </div>
         <div class="col-sm-6 col-md-4">
 	     	<box-menu boxtitle="main.usager.title.family" boxlogo="users" disabled="true"></box-menu>
@@ -35,7 +35,7 @@
 	        <box-menu boxtitle="main.usager.title.extend" boxlogo="repeat" ui-sref="usager/renouveler"></box-menu>
         </div>
         <div class="col-sm-6 col-md-4">
-	        <box-menu boxtitle="main.usager.title.nationality" boxlogo="flag" disabled="true"></box-menu>
+	        <box-menu boxtitle="main.usager.title.nationality" boxlogo="flag"></box-menu>
         </div>
     </div>
     <div class="row" ng-switch-when="company">
