--- a/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
@@ -8,7 +8,7 @@
    	</div>
    	<br>
    	<br>
-    <div class="row">
+    <div class="row accueil-renouveler">
     	<div class="col-sm-6 col-md-5 col-md-offset-1">
         	<box-menu class="box-home" boxtitle="renouveler.stateUnchange" boxlogo="repeat" ui-sref="usager/renouveler/etudes"></box-menu>
         </div>
