creation page demarrage naturalisation

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -35,7 +35,7 @@
 	        <box-menu boxtitle="main.usager.title.extend" boxlogo="repeat" ui-sref="usager/renouveler"></box-menu>
         </div>
         <div class="col-sm-6 col-md-4">
-	        <box-menu boxtitle="main.usager.title.nationality" boxlogo="flag"></box-menu>
+	        <box-menu boxtitle="main.usager.title.nationality" boxlogo="flag" ui-sref="usager/naturalization"></box-menu>
         </div>
     </div>
     <div class="row" ng-switch-when="company">
