creation project naturalization

--- a/src/main/webapp/scripts/app/application/address/address.html
+++ b/src/main/webapp/scripts/app/application/address/address.html
@@ -140,8 +140,8 @@
 		</div>
 		<br>
 	    <div class="row row-center">
-        	<button class="btn btn-default" translate="etudier.button.back" ng-click="back()">Back</button>
-        	<button type="submit" class="btn btn-primary btn-right" translate="etudier.button.continue"
+        	<button type="button" class="btn btn-default" translate="global.button.back" ng-click="back()">Back</button>
+        	<button type="submit" class="btn btn-primary btn-right" translate="global.button.continue"
         			 ng-disabled="addressForm.$invalid || addressForm.$submitted">Continue</button>
         </div>
 	</form>
