--- a/src/main/webapp/scripts/app/application/final/final.html
+++ b/src/main/webapp/scripts/app/application/final/final.html
@@ -11,24 +11,13 @@
 			</div>
 		</div>
 	</div>
-	<br>
 	<div class="row">
-		<div class="col-xs-10 col-xs-offset-1" ng-if="!isRenewal">
-			<p style="line-height: 2" translate="final.form.recevability">Recevability</p>
-			<br>
-			<p style="line-height: 2" translate="final.form.rdv">Rdv</p>
-			<br>
-			<p style="line-height: 2" translate="final.form.decision">Decision</p>
-		</div>
-		<div class="col-xs-10 col-xs-offset-1" ng-if="isRenewal">
-			<p style="line-height: 2" translate="final.form.recevability.renouvellement">Recevability</p>
-			<br>
-			<p style="line-height: 2" translate="final.form.decision.renouvellement">Decision</p>
+		<div class="col-xs-10 col-xs-offset-1 final-informations" translate="final.form.informations">
 		</div>
 	</div>
 	<br>
 	<div class="row row-center">
-	    <button class="btn btn-primary" translate="etudier.button.end" ui-sref="account/application">End</button>
+	    <button class="btn btn-primary" translate="global.button.end" ui-sref="account/application">End</button>
 	</div>
 </div>
     
