--- a/src/main/webapp/scripts/app/application/summary/summary.html
+++ b/src/main/webapp/scripts/app/application/summary/summary.html
@@ -271,8 +271,8 @@
 	<br>
 	<br>
     <div class="row row-center">
-       	<button class="btn btn-default" translate="etudier.button.back" ng-click="back()">Back</button>
-       	<button class="btn btn-success btn-right" translate="summary.form.button.validate"
+       	<button type="button" class="btn btn-default" translate="global.button.back" ng-click="back()">Back</button>
+       	<button class="btn btn-success btn-right" translate="global.button.validate"
        			 ng-if="isInDraftMode"
        			 ng-disabled="projectForm.$invalid || projectForm.$submitted"
        			 ng-click="next()">Validate</button>
