--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -65,6 +65,6 @@
     	</div>
 	</div>
 	<div class="row row-center">
-    	<button class="btn btn-primary" translate="etudier.button.start" ng-click="createApplication()">Start</button>
+    	<button class="btn btn-primary" translate="global.button.start" ng-click="createApplication()">Start</button>
 	</div>
 </div>
