--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row title-underscore">
-    	<h4 translate="etudier.title">Request for a student stay</h4>
+    	<h4 translate="procedure.title">Title</h4>
     </div>
     <br>
     <steps-menu stepnumber="1"></steps-menu>
@@ -15,7 +15,7 @@
 		    	</div>
 		    </div>
 		    <div class="col-xs-10 form-title-text">
-		    	<p translate="etudier.identity.step.long">Identity</p>
+		    	<p translate="procedure.identity.step.long">Identity</p>
 		    </div>
 		</div>
 		<br>
