--- a/src/main/webapp/scripts/app/application/payment/payment.html
+++ b/src/main/webapp/scripts/app/application/payment/payment.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row title-underscore">
-    	<h4 translate="etudier.title">Request for a student stay</h4>
+    	<h4 translate="procedure.title">Title</h4>
     </div>
     <br>
     <steps-menu stepnumber="5"></steps-menu>
@@ -13,7 +13,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-10 form-title-text">
-	    	<p translate="etudier.payment.step.long">Payment</p>
+	    	<p translate="procedure.payment.step.long">Payment</p>
 	    </div>
 	</div>
 	<br>
