--- a/src/main/webapp/scripts/app/application/summary/summary.html
+++ b/src/main/webapp/scripts/app/application/summary/summary.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row title-underscore">
-    	<h4 translate="etudier.title">Request for a student stay</h4>
+    	<h4 translate="procedure.title">Title</h4>
     </div>
     <br>
     <div ng-if="isInDraftMode">
@@ -14,7 +14,7 @@
 		    	</div>
 		    </div>
 		    <div class="col-xs-10 form-title-text">
-		    	<p translate="etudier.summary.step.long">Summary</p>
+		    	<p translate="procedure.summary.step.long">Summary</p>
 		    </div>
 		</div>
 		<br>
