--- a/src/main/webapp/scripts/app/application/final/final.html
+++ b/src/main/webapp/scripts/app/application/final/final.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row title-underscore">
-    	<h4 translate="etudier.title">Request for a student stay</h4>
+    	<h4 translate="procedure.title">Title</h4>
     </div>
     <br><br>
 
