--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -1,11 +1,11 @@
 <div ng-cloak>
     <div class="row title-underscore">
-    	<h4 translate="etudier.title">Request for a student stay</h4>
+    	<h4 translate="procedure.title">Request for a student stay</h4>
     </div>
     <br>
     <div class="row">
     	<div class="col-xs-offset-1 col-sm-offset-2">
-    		<h3 translate="etudier.step.title">5 steps for your request</h3>
+    		<h3 translate="procedure.step.title">5 steps for your request</h3>
     	</div>
    	</div>
    	<br><br>
@@ -16,7 +16,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="etudier.identity.step.long">Identity</p>
+	    	<p translate="procedure.identity.step.long">Identity</p>
 	    </div>
 	</div>
     <div class="row">
@@ -26,7 +26,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="etudier.address.step.long">Address</p>
+	    	<p translate="procedure.address.step.long">Address</p>
 	    </div>
 	</div>
     <div class="row">
@@ -36,7 +36,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="etudier.project.step.long">Project</p>
+	    	<p translate="procedure.project.step.long">Project</p>
 	    </div>
 	</div>
     <div class="row">
@@ -46,7 +46,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="etudier.summary.step.long">summary</p>
+	    	<p translate="procedure.summary.step.long">summary</p>
 	    </div>
 	</div>
     <div class="row">
@@ -56,12 +56,12 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="etudier.payment.step.long">Payment</p>
+	    	<p translate="procedure.payment.step.long">Payment</p>
 	    </div>
 	</div>
 	<br>
     <div class="row">
-    	<div class="col-md-10 col-md-offset-1 well" translate="etudier.preparationText">
+    	<div class="col-md-10 col-md-offset-1 well" translate="procedure.preparationText">
     	</div>
 	</div>
 	<div class="row row-center">
